# factor_bank

./: .env.example  README.md  pyproject.toml
deploy/: factor-bank.service
docs/superpowers/plans/: 2026-07-06-factor-bank-plan-B-ml-eval.md  2026-07-07-factor-bank-plan-C-workflow.md
src/factor_bank/: cli.py  config.py
src/factor_bank/data/: custom.py  sharadar.py  store.py
src/factor_bank/engine/: evaluate.py  factors.py  metrics.py  panel.py  quantiles.py
src/factor_bank/lab/: grid.py  screen.py
src/factor_bank/ml/: bridge.py
src/factor_bank/server/: api.py  app.py  jobs.py
src/factor_bank/server/static/: fb.css  index.html
src/factor_bank/server/static/js/: common.js  evaluate.js  lab.js  mleval.js  scans.js
tests/: conftest.py  test_api.py  test_bridge.py  test_config.py  test_custom.py  test_disk_cache.py  test_enriched.py  test_evaluate.py  test_factors.py  test_jobs.py  test_lab.py  test_metrics.py  test_ml_import.py  test_panel.py  test_quality.py  test_quantiles.py  test_sharadar.py  test_store.py  test_universe.py
