[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factor-bank"
version = "1.0.0"
description = "Cross-sectional factor evaluation dashboard on the historical S&P 500"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "s3fs>=2023.6.0",
    "pyarrow>=14.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ml = [
    "lightgbm>=4.0",
    "joblib>=1.3",
    "alpha_eval @ git+https://github.com/softdevintegrations/alpha_eval.git",
]
dev = ["pytest>=7.4", "httpx>=0.24"]

[project.scripts]
factor-bank = "factor_bank.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"factor_bank.server" = ["static/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
